--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,6 +1,7 @@
 .App {
     --header_height: 60px;
     max-width: 1280px;
+    overflow-x: auto;
     padding: 0 70px;
     font-family: 'Montserrat', sans-serif;
 }
