--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,25 +1,72 @@
 .sidebar {
+    width: 317px;
+   height: 100vh;
+    padding: 16px 24px;
+    gap:24px;
+    display: none;
+    position: absolute;
+    left: 0;
+    top:0;
+    z-index: 10000;
+    background-color: white;
+
 }
 
 .sidebar.open {
+    display: flex;
+    flex-direction:column ;
+    align-items: flex-end;
 }
 
 .background {
+    opacity: 0.3;
+    background: #000000;
+    height: 100vh;
+    width: calc(100vw - 317px);
+    position: absolute;
+    right: 0;
+    top:0;
+    z-index: 10000
 }
 
 .nav {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:45px;
 }
 
-.nav a {
+.link {
+    color: #000;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-decoration-line: none;
+
 }
 
-.nav a:hover {
+.link:hover {
+    color: #58ACFF;
 }
 
-.nav a.active {
+.link.active {
+    color: #0059B2;
+    text-decoration-line: underline;
 }
 .close {
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border: none;
+
 }
 
 .close img {
+
 }
