--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -1,4 +1,13 @@
 .select {
+    width: 165px;
+    height: 24px;
+    color: #000;
+
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 .select:focus {
@@ -6,4 +15,5 @@
 
 
 .option:hover {
+
 }
