--- a/src/s2-homeworks/hw10/Loader.module.css
+++ b/src/s2-homeworks/hw10/Loader.module.css
@@ -1,3 +1,13 @@
-.loader {
-    /*свг и/или анимация*/
+.wrapperImg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+    width: 100%;
+
+
+}
+img{
+    height: 100%;
+    width: 150px;
 }
