--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,6 +1,5 @@
 .button {
     border-radius: 3px;
-    width: 132px;
     height: 30px;
     padding: 5px 24px;
     color: white;
@@ -9,7 +8,8 @@
     font-style: normal;
     font-weight: 600;
     line-height: 20px;
-    border: none
+    border: none;
+    white-space: nowrap;
 }
 
 .disabled {
